started adding other price target lines

--- a/index.html
+++ b/index.html
@@ -18,7 +18,16 @@
 			.sparkLine{
 				fill: none;
 				stroke: #3498DB;
-				stroke-weight:1.5px;
+			}
+			.upsideLine {
+				fill: none;
+				stroke: #27ae60;
+				shape-rendering: crispEdges;
+			}
+			.downsideLine {
+				fill: none;
+				stroke: #c0392b;
+				shape-rendering: crispEdges;
 			}
 			.metric {
 				display: block;
