--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
 	<head>
 		<meta charset="utf-8">
+		<title>Stock Mosaics</title>
 		<!--cssgrid-->
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<link rel="stylesheet" href="css/stockMosaics.css" type="text/css" media="screen" />
